# cerid-ai

./: .claudeignore  .env.age  .env.example  .gitignore  .mcp.json  .sync-manifest.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  artifacts  data  docker-compose.ci.yml  docker-compose.yml  librechat.yaml  pyproject.toml
.claude/: .gitignore  SETUP.md  launch.json  settings.json
.claude/agents/: kb-curator.md
.claude/commands/: lock.md  stack.md  sync.md  test.md
.claude/hooks/: pythonlint.sh  safety-check.sh  session-start.sh  typecheck.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  electron-build.yml
.internal/changelog/: CHANGELOG.md
.internal/plans/: PLAN_MEMORY_SALIENCE.md  PLAN_PHASE51_HARDENING.md
.internal/tasks/: lessons.md  todo.md
app/: docker-compose.yml
app/api/: cerid_sync_lib.py  main.py  sync_check.py
app/scripts/: cerid-sync.py  restore-kb.sh  start-cerid.sh
core/: __init__.py
core/src/: __init__.py  tools.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_MAP.md  BRANDING.md  CERID_AI_PROJECT_REFERENCE.md  COMPETITIVE_ANALYSIS_2026-04.md  COMPLETED_PHASES.md  CONSOLIDATED_ISSUES_2026-04-05.md  CONTRIBUTING.md  CONVENTIONS.md  DEPENDENCY_AUDIT_2026-04-05.md  DEPENDENCY_COUPLING.md  DEPENDENCY_UPGRADES.md  EMBEDDING_EVALUATION.md  EMBEDDING_MIGRATIONS.md  ENV_CONVENTIONS.md  EVAL_BASELINES.md  FEEDBACK_LOOP_DESIGN.md  IMPLEMENTATION_PLAN_2026-04-03.md  INTEGRATION_GUIDE.md  ISSUES.md  ISSUES_HISTORICAL.md  MARKET_ANALYSIS.md  MODEL_PRELOAD.md  OBSERVABILITY.md  OPERATIONS.md  PERF_BASELINE_2026-04-05.md  PHASE4_PLAN.md  PLUGIN_DEVELOPMENT.md  PRESERVATION.md  ROADMAP.md  ROUTER_REGISTRY.md  SANDBOX_TESTING.md  SDK_GUIDE.md  SDK_PUBLISHING.md  TIERED_INFERENCE_ARCHITECTURE.md  TIER_MATRIX.md  UNIFIED_PLAN_2026-04-05.md  openapi-sdk-v1.json
docs/plans/: 2026-02-21-phase4a-implementation.md  2026-02-22-multi-machine-sync-plan.md  2026-02-22-phase6-gui-design.md  2026-03-13-cerid-trading-agent.md  2026-03-13-model-router-resilience-design.md  2026-03-13-model-router-resilience-impl.md  2026-03-14-multi-session-cloud-sync.md  DEVELOPMENT_PLAN_PHASE16-18.md  DEVELOPMENT_PLAN_PHASE42-50.md  PHASE25_SMART_ROUTING.md  PLAN_EXTERNAL_APIS_FOLDERS_RAG.md  PLAN_PHASE51_HARDENING.md
plugins/: LICENSE  README.md
plugins/analytics/: LICENSE  manifest.json
plugins/apple-notes/: manifest.json  plugin.py
plugins/audio/: LICENSE  manifest.json  plugin.py
plugins/calendar/: manifest.json  plugin.py
plugins/custom-rag/: manifest.json  plugin.py
plugins/docling-parser/: __init__.py  manifest.json  plugin.py
plugins/github-issues/: __init__.py  manifest.json  plugin.py
plugins/gmail/: manifest.json  plugin.py
plugins/metamorphic/: __init__.py  manifest.json  plugin.py
plugins/ocr/: LICENSE  manifest.json  plugin.py
plugins/outlook/: manifest.json  plugin.py
plugins/vision/: LICENSE  manifest.json  plugin.py
plugins/workflow-builder/: LICENSE  __init__.py  manifest.json
scripts/: backup-kb.sh  cerid-sidecar.py  cerid-sync.py  clipboard_daemon.py  detect-gpu.sh  env-lock.sh  env-unlock.sh  gen_env_example.py  gen_router_registry.py  gen_sdk_openapi.py  install-macos-integration.sh  install-sidecar.sh  lint-http-singleton-thread-guard.py  lint-no-legacy-neo4j-tree.py  lint-no-module-env-captures.py  lint-no-silent-catch.py  migrate_taxonomy.py  regen-lock.sh  restore-kb.sh  separate-marketing.sh  setup-archive.sh  setup.sh  silent_catch_allowlist.txt  start-cerid.sh  sync-repos.py  validate-env.sh
scripts/hooks/: pre-commit
scripts/lib/: healthcheck.sh
scripts/tests/: test_lint_no_silent_catch.py  test_lint_phase_2_5.py  test_sync_repos_glob.py
src/gui/: Dockerfile  app.py  requirements.txt
src/mcp/: .dockerignore  .env.example  .importlinter  Dockerfile  cerid_sync_lib.py  config.py  (+12 more)
tasks/: lessons.md  section3-wiring-check.md  todo.md
tests/: test_e2e_integration.py
(+1104 files in other folders)
