[project]
name = "cerid-ai"
version = "1.0.0"
description = "Privacy-first Personal AI Knowledge Companion"
requires-python = ">=3.11"
license = "Apache-2.0"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src/mcp"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["src/mcp/tests"]
asyncio_mode = "auto"
