[project]
name = "cerid-ai"
version = "1.0.0"
description = "Privacy-first Personal AI Knowledge Companion"
requires-python = ">=3.11"
license = "Apache-2.0"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src/mcp"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "BLE", "ERA"]  # BLE001: no blind except Exception, ERA: commented-out code
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]  # sentry_sdk.init() must run before all other imports

[tool.mypy]
python_version = "3.11"
files = ["src/mcp"]
exclude = ["scripts/", "tests/"]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path = ["src/mcp"]

[tool.pytest.ini_options]
testpaths = ["src/mcp/tests"]
asyncio_mode = "auto"
markers = [
    "unit: Fast tests with no external dependencies",
    "integration: Tests requiring Docker services (Neo4j, ChromaDB, Redis)",
    "eval: Evaluation harness — Monte Carlo, RAGAS, benchmarks (slow, optional)",
]
