[project]
name = "cerid-ai"
version = "0.84.0"
description = "Privacy-first Personal AI Knowledge Companion"
requires-python = ">=3.11"
license = "Apache-2.0"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src/mcp"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "BLE001"]
ignore = ["E501"]  # line length handled by formatter
# Progressive quality rules (tracked, not CI-gating until sweep complete):
# ERA001 (commented-out code): ruff check src/mcp/ --select ERA -q | wc -l

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402", "BLE001"]  # sentry_sdk.init() must run before all other imports; top-level exception handler
"**/main.py" = ["E402", "BLE001"]
"**/error_handler.py" = ["BLE001"]  # error handler must catch all exceptions
"**/degradation.py" = ["BLE001"]  # degradation probes must catch all exceptions
"**/agent_events.py" = ["BLE001"]  # fire-and-forget SSE events must not crash caller
"app/main.py" = ["E402", "BLE001"]  # sentry_sdk.init() must run before all other imports
"**/tests/**" = ["BLE001"]  # test files can use broad except for test isolation
"**/core/**" = ["BLE001"]  # core/ extracted from branch without BLE001 annotations; sweep planned
"**/app/**" = ["BLE001"]  # app/ extracted from branch without BLE001 annotations; sweep planned

[tool.mypy]
python_version = "3.11"
files = ["src/mcp"]
exclude = ["scripts/", "tests/"]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path = ["src/mcp"]

[tool.pytest.ini_options]
testpaths = ["src/mcp/tests"]
asyncio_mode = "auto"
markers = [
    "unit: Fast tests with no external dependencies",
    "integration: Tests requiring Docker services (Neo4j, ChromaDB, Redis)",
    "eval: Evaluation harness — Monte Carlo, RAGAS, benchmarks (slow, optional)",
]

[tool.importlinter]
root_packages = ["core", "app", "config"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core must not import app"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["app", "routers", "services", "middleware", "parsers", "sync", "models", "deps", "tools", "main", "scheduler", "db", "eval", "stores", "agents"]

# config→utils boundary removed: config.settings legitimately imports utils.model_registry
# The critical boundary (core must not import app) is enforced above
